--- a/api/build.gradle
+++ b/api/build.gradle
@@ -18,7 +18,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'mysql:mysql-connector-java:8.0.23' // MySQL JDBC 드라이버
+    implementation 'org.springframework.kafka:spring-kafka'
+
+    runtimeOnly 'com.mysql:mysql-connector-j' // MySQL JDBC 드라이버
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
